--- a/views/shop.html
+++ b/views/shop.html
@@ -3,9 +3,9 @@
         <p>Shop Page</p>
     </div>
 </section>
-<div class="product-grid__item   grid__item one-half large--one-third" >
+<div class="product-grid__item   grid__item one-half large--one-third" ng-repeat='product in products track by $index'>
 
     <!--Repeat over your data and display it below -->
+<shop-component product='product' set-id='setId(id)'></shop-component>
 
-    
 </div>
